# NimbleGTK

./: .gitignore  README.md  build-flatpak.sh  meson.build  nimble.flatpakref  run.sh
data/: io.vncl.sudofahh.nimble.desktop  io.vncl.sudofahh.nimble.metainfo.xml
flatpak/: io.vncl.sudofahh.nimble.json
schemas/: gschemas.compiled  io.vncl.sudofahh.nimble.gschema.xml
src/: editor.js  main.js  settings.js  window.js
styles/: style.css
